# flutter_ffi_app

./: README.md  pubspec.yaml
lib/: home_page.dart  main.dart
lib/dto/: address.dart  person.dart
lib/service/: libffitest_service.dart
linux/: CMakeLists.txt
linux/prebuilt_shared_libraries/: CMakeLists.txt
linux/prebuilt_shared_libraries/libffitest/: CMakeLists.txt
linux/prebuilt_shared_libraries/libffitest/source/: libffitest.c  libffitest.h
linux/runner/: CMakeLists.txt  my_application.cc
